# ttv

./: .env.example  .gitignore  README.md  TODO.md  audio.py  config.py  parser.py  pipeline.py  pyproject.toml  schemas.py  stitch.py  ttv.py  voice.py
docs/: highlight.md
examples/: sample.txt  sample_voiceless.txt
slides/: __init__.py  base.py  code.py  image.py  prose.py
tests/: test_audio.py  test_code.py  test_image.py  test_prose.py  test_stitch.py
thread_task_logics/: illustrator_task_logic.py  video_editor_task_logic.py  voice_actor_task_logic.py
util/: fonts.py  highlight.py
