[project]
name = "ttv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "catppuccin>=2.5.0",
    "pillow>=12.2.0",
    "piper-tts>=1.2.0",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.22",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
ttv = "ttv:main"
